--- a/static/css/base-app.css
+++ b/static/css/base-app.css
@@ -60,7 +60,7 @@ a:hover {
 
 .card {
   background: var(--stone-100);
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
   padding: 1rem;
   padding-bottom: 1.5rem;
 }
